Fix menu overflow

--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    overflow: hidden;
 	}
 
   .switch-lang {
@@ -95,7 +96,7 @@
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
-      grid-gap: 10vh;
+      grid-gap: 5vh;
     }
 
     .switch-lang {
